הוספת דף סקר להצגת המשתמש